# depiction-map

./: .gitignore  Cargo.toml  README.md  wikidata_dragon_query.sparql
ressources/static/: code.js  index.html
sample_ressources/: overrides.json
src/: depict_app_data.rs  display_data_set.rs  fetch_data.rs  fetch_data_openstreetmap.rs  fetch_data_wikidata_sparql.rs  fetched_data_set.rs  git_util.rs  image_reference.rs  lib.rs  main.rs  map_entry.rs  overrides.rs  storage.rs
static/: code.js  index.html
