[package]
name = "depiction_map"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
anyhow = "1.0.98"
arc-swap = "1.7.1"
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
git2 = "0.20.2"
log = "0.4.27"
ordered-float = { version = "5.0.0", features = ["serde"] }
osm_overpass = "0.1.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tai-time = { version = "0.3.3", features = ["serde", "tai_clock"] }
